--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License"
 ]
+include = ["resources/**/*"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
