--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License"
 ]
-include = ["resources/**/*"]
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
@@ -38,7 +37,7 @@ syrupy = ">=4.0.0"
 jinja2 = ">=3.0.0"
 
 [tool.poetry.plugins."pytest11"]
-"textual-snapshot" = "pytest_textual_snapshot"
+"textual-snapshot" = "pytest_textual_snapshot.plugin"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
