--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ python = "^3.8.1"
 pytest = ">=8.0.0"
 rich = ">=12.0.0"
 textual = ">=0.28.0"
-syrupy = ">=4.0.0"
+syrupy = "4.8.0"
 jinja2 = ">=3.0.0"
 
 [tool.poetry.plugins."pytest11"]
